--- a/_sass/minimal-mistakes/skins/_mint.scss
+++ b/_sass/minimal-mistakes/skins/_mint.scss
@@ -9,7 +9,6 @@ $muted-text-color: hsla(200,0%,0%,.7) !default;
 $primary-color: #5BCE9C !default;
 $border-color: mix(#fff, hsla(200,0%,0%,.7), 75%) !default;
 $footer-background-color: #5BCE9C !default;
-$footer-color: #000000 !default;
 $link-color: #3A96D2 !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
